fix: reportPopup z-index 수정

--- a/src/main/webapp/resources/css/reportPopup.css
+++ b/src/main/webapp/resources/css/reportPopup.css
@@ -3,7 +3,7 @@
 }
 
 .popupWrap1 {
-	z-index: 99999;
+	z-index: 9997;
 	width: 100%;
 	height: 100%;
 	position: absolute;
